# ic_log

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  platform.rs
src/filter/: mod.rs
src/fmt/: mod.rs
src/fmt/humantime/: extern_impl.rs  mod.rs  shim_impl.rs
src/fmt/writer/: atty.rs  mod.rs
src/fmt/writer/termcolor/: imp.rs  mod.rs
