[package]
name = "ic_log"
version = "0.1.0"
description = """
A logging implementation for `log` in IC
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/ufoscout/ic_log/"
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "logger", "internet-computer"]
edition = "2021"
rust-version = "1.60.0"

[dependencies]
arc-swap = "1.6"
log = { version = "0.4.8", features = ["std"] }
env_logger = { version = "0.10.0", default-features = false }
ic-cdk = "0.7.0"

# Enables rfc3339 time format in logs
# Without this, timestamps will be printed as timestamp in nanoseconds
humantime = { version = "2", default-features = false, optional = true }

[features]
default = ["humantime"]
humantime = ["dep:humantime"]